--- a/src/App.module.css
+++ b/src/App.module.css
@@ -47,7 +47,7 @@
   border-left: solid transparent 12px;
   border-right: solid transparent 12px;
   border-bottom: solid rgb(170, 253, 170) 12px;
-  position: absolute;
+  position: fixed;
   margin: 0;
   padding: 0;
 }
